Version 5.2.0.7
Intern strings, etc., only in read-syntax mode, not read mode
racket/draw: add text-outline to dc-path%

Version 5.2.0.6
Added pseudo-random-generator-vector?

Version 5.2.0.5
Cross-module inlining of trivial functions, plus map, for-each,
 andmap, and ormap; 'compiler-hint:cross-module-inline hint
Generalize gcd and lcm to work on rationals
compiler/zo-structs: added inline-variant
racket/stream: added stream constructor

Version 5.2.0.4
Regexps are `equal?' when they have the same source [byte] string
 and mode
Numbers, characters, strings, byte strings, and regexps are interned by
 read and datum->syntax
Added read-intern-literal
racket/class: added send/keyword-apply and dynamic-send
racket/draw: added get-names to color-database<%>
mzlib/pconvert: added add-make-prefix-to-constructor parameter,
 which changes the default constructor-style printing in DrRacket
 to avoid a make- prefix; the HtDP languages set the parameter to #t
at-exp, scribble: dropped distinctness of @{}-introduced newline strings

Version 5.2.0.3
Added module-predefined?
Changed the raacket -k command-line flag

Version 5.2.0.2
Added port-closed-evt
Changed I/O scheduling to use epoll()/kqueue() when available

Version 5.2, November 2011
Generalized begin-with-syntax to allow phase-N definitions,
 both variable and syntax, within a module for all N >= 0;
 removed define-values-for-syntax from fully expanded forms;
 added begin-with-syntax to fully expanded forms
Changed the location-creation semantics of internal definitions
 and letrec-syntaxes+values (to make them more let-like)
Added support for the collection links file, including
 (find-system-path 'links-file) and the raco link command
Added exn:fail:syntax:unbound
Added date*, which extends date to include nanoseconds and a 
 time zone name
Changed seconds->date to accept a real number return a date*
Added set-port-next-location! and changed the default prompt 
 read handler to use it when input and output ar terminals